<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_main"
    tools:context=".view.Fragment.M001HomeFrg">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/img_logo_2"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="40dp"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/ed_entername"
        android:layout_width="match_parent"
        android:hint="@string/txt_enter_your_name"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_hint"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/txt_pick_your_side"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TableRow
        android:layout_width="match_parent"
        android:background="@drawable/bg_hint"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/iv_x"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_x"
            android:layout_margin="20dp"
            android:background="@drawable/bg_xo"
            android:padding="10dp"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
        <ImageView
            android:id="@+id/iv_o"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_o"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:background="@drawable/bg_xo"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
    </TableRow>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_playgame"
        android:layout_width="match_parent"
        android:text="@string/txt_play_game"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginHorizontal="50dp"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_btn_playgame"
        android:layout_height="wrap_content"/>
</LinearLayout>